Fix mobile bug with button to close popup panel
So it turns out that mobile view didn't like the hack I used to make the
button text invisible. So the answer is (of course) another hack!
Mwahahaha!

--- a/BadPony/BadPony.WebApiHost/public/assets/css/main.less
+++ b/BadPony/BadPony.WebApiHost/public/assets/css/main.less
@@ -184,7 +184,7 @@ body {
             -moz-box-sizing: border-box;
             -webkit-box-sizing: border-box;
             box-sizing: border-box;
-            padding: 0 0 0 12px;
+            padding: 0;
             -moz-transition: background-color 0.1s ease-in-out;
             -o-transition: background-color 0.1s ease-in-out;
             -webkit-transition: background-color 0.1s ease-in-out;
@@ -193,6 +193,13 @@ body {
             &:hover {
                 background-image: url('/assets/images/crosswhite.gif');
                 background-color: #000;
+            }
+
+            &:before {
+                content: "";
+                width: 12px;
+                height: 12px;
+                display: block;
             }
         }
     }
